Ajout du bouton Ajouter

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 
     <!-- Image de dé -->
     <div>
-        
         <img id="image-de"/>
-
     </div>
-    
+    <div id="container"></div>
+
+    <!-- Bouton pour ajouter le score -->
+    <button id="ajouter">Ajouter</button>
+    <div id="ajouterscore"></div>
+
 
     <!-- Lien vers le code js -->
     <script src="de.1.simple.js"></script>
