Ajout bibliothéque jQuery

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <button id="ajouter">Ajouter</button>
     <div id="ajouterscore"></div>
 
-
+    <!-- Lien vers la bibliothéque jQuery -->
+    <script src="jQuery.js"></script>
     <!-- Lien vers le code js -->
     <script src="de.1.simple.js"></script>
 </body>
